# budgeto

./: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
backend/: .gitignore  Dockerfile  config.py  db.py  docker-compose.yml  fly.toml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/db/: seed.py
backend/routers/: auth.py  estimates.py  expenses.py  settings.py
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  types.tsx
frontend/src/components/: AddEstimateForm.tsx  AddExpenseForm.tsx  AvatarDropdown.tsx  BudgetOverview.tsx  DatePicker.tsx  EstimatedBudgetOverview.tsx  EstimatesList.tsx  EstimatesTable.tsx  ExpensesList.tsx  ExpensesTable.tsx  Header.tsx  HeaderTabs.tsx  PageHeading.tsx  SettingsContent.tsx
frontend/src/components/budget-items/: BudgetItemActions.tsx  BudgetItemCard.tsx  BudgetItemsListDesktop.tsx  BudgetItemsListMobile.tsx  BudgetItemsOnADay.tsx  ConfirmationDialog.tsx
frontend/src/components/estimates/: AddEstimateDialog.tsx
frontend/src/components/ui/: StatCard.tsx
frontend/src/context/: AuthContext.tsx  EstimatesContext.tsx  ExpensesContext.tsx  SettingsContext.tsx
frontend/src/hooks/: useDefaultCurrencyAmountStr.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: EstimatesPage.tsx  HomePage.tsx  LoginPage.tsx
src/: App.tsx  index.css  main.tsx
src/components/: Header.tsx  InputWithLabel.tsx  SelectWithLabel.tsx
src/context/: SettingsContext.tsx
src/pages/: HomePage.tsx  SettingsPage.tsx
(+4 files in other folders)
